--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,6 +11,7 @@ pool:
 
 variables:
   buildConfiguration: 'Release'
+  PYTHON: 'C:\Python311\python.exe' # Set this to the correct Python path for node-gyp
 
 steps:
 - task: UseDotNet@2
@@ -19,10 +20,18 @@ steps:
     packageType: sdk
     version: '6.x'
 
+# Step to clean node_modules directory
+- script: 'rm -rf node_modules'
+  displayName: 'Clean node_modules'
+
 - task: Npm@1
   displayName: 'Run npm install'
   inputs:
     verbose: false
+
+# Step to rebuild node-sass to ensure compatibility
+- script: 'npm rebuild node-sass'
+  displayName: 'Rebuild node-sass'
 
 - script: './node_modules/.bin/node-sass Tailspin.SpaceGame.Web/wwwroot --output Tailspin.SpaceGame.Web/wwwroot'
   displayName: 'Compile Sass assets'
@@ -46,3 +55,16 @@ steps:
     command: 'build'
     arguments: '--no-restore --configuration Release'
     projects: '**/*.csproj'
+
+- task: DotNetCoreCLI@2
+  displayName: 'Publish the project'
+  inputs:
+    command: 'publish'
+    arguments: '--no-restore --configuration Release --output $(Build.ArtifactStagingDirectory)'
+    projects: '**/*.csproj'
+
+- task: PublishBuildArtifacts@1
+  displayName: 'Publish Artifacts'
+  inputs:
+    pathToPublish: '$(Build.ArtifactStagingDirectory)'
+    artifactName: 'drop'
