--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -80,5 +80,5 @@ steps:
 - task: PublishBuildArtifacts@1
   displayName: 'Publish Artifacts'
   inputs:
-    pathToPublish: '$(Build.ArtifactStagingDirectory)/Release'
+    pathToPublish: '$(Build.ArtifactStagingDirectory)/$(buildConfiguration)'
     artifactName: 'drop'
